# DatasetGateway

./: .gitignore  AGENTS.md  Architecture.md  CAVE-auth-endpoints.md  CLAUDE.md  README.md
datasetgate/: .env.example  Dockerfile  conftest.py  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
datasetgate/auth_api/: urls.py  views.py
datasetgate/auth_api/tests/: test_auth_api.py
datasetgate/cave_api/: oauth_views.py  urls.py  views.py
datasetgate/cave_api/tests/: test_grants.py  test_user_cache.py
datasetgate/core/: admin.py  allauth_adapter.py  authentication.py  cache.py  models.py  permissions.py
datasetgate/core/management/commands/: import_clio_auth.py  make_admin.py  seed_groups.py  seed_permissions.py
datasetgate/core/migrations/: 0001_initial.py  0002_set_site_domain.py  0003_grant_group_fk.py  0004_convert_dataset_admin_to_grants.py  0005_remove_dataset_admin.py
datasetgate/core/tests/: test_middleware.py
datasetgate/datasetgate/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
datasetgate/ngauth/: gcs.py  tokens.py  urls.py  views.py
datasetgate/ngauth/templates/ngauth/: index.html  login_status.html  success.html
datasetgate/ngauth/tests/: test_tokens.py
datasetgate/scim/: filters.py  pagination.py  renderers.py  serializers.py  views.py
datasetgate/web/: urls.py  views.py
datasetgate/web/templates/web/: access_denied.html  base.html  dataset_admin_manage.html  datasets.html  grant_manage.html  my_datasets.html  public_roots.html  team_dashboard.html  team_lead_manage.html  tos_accept.html  tos_landing.html  tos_landing_denied.html
datasetgate/web/tests/: test_web_stories.py
dsg/: .dockerignore  .env.example  Dockerfile  conftest.py  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
dsg/auth_api/: views.py
dsg/auth_api/tests/: test_auth_api.py  test_sa_flow.py
dsg/cave_api/: apps.py  oauth_views.py  urls.py  views.py
dsg/cave_api/tests/: test_cave_api.py  test_group_members.py  test_long_lived_token.py  test_sa_token_blocked.py  test_user_cache.py
dsg/core/: admin.py  allauth_adapter.py  audit.py  authentication.py  backup.py  cache.py  cookie_middleware.py  iam.py  models.py  permissions.py
dsg/core/management/commands/: backup_db.py  import_clio_auth.py  import_csv.py  import_neuprint_auth.py  make_admin.py  restore_db.py  seed_permissions.py  sync_bucket_iam.py
dsg/core/migrations/: 0001_initial.py  0002_set_site_domain.py  0003_alter_grant_source.py  0004_datasetbucket_m2m_remove_gcs_bucket.py  0005_service_model_and_tos_service_fk.py  0006_user_notes_and_affiliation.py  0007_user_picture_url.py  0008_apikey_expires_at.py  0009_serviceaccount_serviceaccounttoken_and_more.py
dsg/core/tests/: test_audit.py  test_audit_commands.py  test_backup_command.py  test_backup_prune.py  test_iam.py  test_import_csv.py  test_import_neuprint_auth.py  test_middleware.py  test_service_accounts.py
dsg/dsg/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
dsg/ngauth/: apps.py  gcs.py  urls.py  views.py
dsg/ngauth/templates/ngauth/: index.html
dsg/scim/: authentication.py  parsers.py  serializers.py  urls.py  utils.py  views.py
dsg/scim/tests/: test_audit_scim.py  test_scim_crud.py
dsg/scripts/: datasetgateway-backup.service  datasetgateway-backup.timer  datasetgateway.service  deploy.py  manage.sh  serve-prod.sh  serve.sh  setup.py  stop-serve.sh
dsg/web/: forms.py  urls.py  views.py
dsg/web/templates/allauth/layouts/: base.html
dsg/web/templates/web/: _dataset_card.html  access_denied.html  base.html  dataset_admin_manage.html  datasets.html  grant_manage.html  group_dashboard.html  my_account.html  my_datasets.html  public_roots.html  service_account_detail.html  service_accounts.html  team_dashboard.html  team_lead_manage.html  tos_accept.html  tos_landing.html  tos_landing_denied.html  tos_service_check.html
dsg/web/templatetags/: markdown_filter.py
dsg/web/tests/: test_audit_web.py  test_service_accounts_web.py  test_web_stories.py
(+18 files in other folders)
